--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="blog.pageTitle">AI Model Insights & Tutorials - Model Guru</title>
     <meta name="description" data-i18n="blog.pageDescription" content="Explore the latest AI model trends, tutorials, and best practices to help you better understand and use AI models.">
+    
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://modelguru.deepseek.diy/blog.html" />
+
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
