--- a/career.html
+++ b/career.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="meta.title">Model Guru - Careers</title>
-    <meta name="description" data-i18n="meta.description" content="Join Model Guru as a Next.js Full Stack Developer. Work remotely and help build the future of AI model discovery and analytics.">
+    <meta name="description" data-i18n="career.pageDescription" content="Join the Model Guru team and help shape the future of AI model discovery. Explore open positions.">
+    
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://modelguru.deepseek.diy/career.html" />
+
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
