--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="faq.pageTitle">FAQ - Model Guru</title>
     <meta name="description" data-i18n="faq.pageDescription" content="Find answers to frequently asked questions about Model Guru, AI model discovery, comparison, and analytics.">
+    
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://modelguru.deepseek.diy/faq.html" />
+
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
