--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="meta.title">Model Guru - Discover & Track AI Models</title>
-    <meta name="description" data-i18n="meta.description" content="Your central hub for discovering and tracking AI/ML models across platforms. Find trending models, track usage metrics, and make informed decisions.">
+    <meta name="description" data-i18n="meta.description" content="Model Guru provides insights and comparisons for AI models across various platforms.">
+    
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://modelguru.deepseek.diy/" />
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
