--- a/login.html
+++ b/login.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" data-i18n="login.pageDescription" content="Log in to your Model Guru account to access personalized features and premium reports.">
     <title>Model Guru - Sign In & Register</title>
+    <link rel="canonical" href="https://modelguru.deepseek.diy/login.html" />
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/auth.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
