--- a/privacy.html
+++ b/privacy.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Privacy Policy for Impulse - Brain Training Games">
+  <meta name="description" data-i18n="privacy.pageDescription" content="Understand how Model Guru collects and protects your data.">
   <meta name="keywords" content="privacy, policy, mobile game, data collection">
   <meta name="author" content="Your Company">
   <meta http-equiv="Content-Language" content="en">
 
   <!-- Canonical Link -->
-  <link rel="canonical" href="https://www.yourwebsite.com/privacy-policy" />
+  <link rel="canonical" href="https://modelguru.deepseek.diy/privacy.html" />
 
   <!-- Open Graph for Social Media -->
   <meta property="og:title" content="Privacy Policy - Impulse - Brain Training Games">
@@ -70,6 +70,8 @@
       color: white;
     }
   </style>
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
