--- a/reports.html
+++ b/reports.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="meta.title">Model Guru - AI Model Reports & Analytics</title>
-    <meta name="description" data-i18n="meta.description" content="Get comprehensive AI model reports and analytics to discover profitable opportunities across different model types and APIs.">
+    <meta name="description" data-i18n="reports.pageDescription" content="Access premium reports and in-depth analysis of AI model performance, trends, and comparisons.">
+    
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://modelguru.deepseek.diy/reports.html" />
+
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
