--- a/platforms.html
+++ b/platforms.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="meta.title">Model Guru - AI Platforms</title>
-    <meta name="description" data-i18n="meta.description" content="Explore and compare different AI platforms and their model offerings. Find the best platform for your AI needs.">
+    <meta name="description" data-i18n="platforms.pageDescription" content="Explore AI model platforms tracked by Model Guru, including Replicate, Hugging Face, and Stability AI.">
+    
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://modelguru.deepseek.diy/platforms.html" />
+
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
