--- a/terms.html
+++ b/terms.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Read the terms and conditions for using the mobile simulator.">
+  <meta name="description" data-i18n="terms.pageDescription" content="Read the terms and conditions for using Model Guru.">
   <meta name="keywords" content="terms, conditions, mobile, simulator, terms of service">
   <meta name="author" content="Your Name or Company">
   <meta http-equiv="Content-Language" content="en">
 
   <!-- Canonical Link -->
-  <link rel="canonical" href="https://www.yourwebsite.com/terms" />
+  <link rel="canonical" href="https://modelguru.deepseek.diy/terms.html" />
 
   <!-- Open Graph for Social Media -->
   <meta property="og:title" content="Terms of Service">
@@ -123,6 +123,9 @@
       }
     }
   </style>
+
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
