--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="meta.title">Model Guru - Testimonials</title>
-    <meta name="description" data-i18n="meta.description" content="Read what our users say about Model Guru's AI model discovery and comparison platform.">
+    <meta name="description" data-i18n="testimonials.pageDescription" content="See what developers and businesses are saying about Model Guru and how it helps them succeed with AI.">
+    
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://modelguru.deepseek.diy/testimonials.html" />
+
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
