--- a/terms.html
+++ b/terms.html
@@ -159,28 +159,72 @@
   <footer class="footer">
     <div class="container">
       <div class="footer-grid">
-        <div class="footer-brand">
-          <h3>Model Guru</h3>
-          <p>Your AI Model Discovery & Analytics Hub</p>
-          <select id="languageSwitcher" class="language-switcher">
+        <!-- Column 1: Brand and Language -->
+        <div class="footer-column footer-brand">
+          <a href="index.html" class="footer-logo">Model Guru</a>
+          <p data-i18n="footer.description">Your central hub for discovering, tracking, and analyzing AI models across the evolving landscape.</p>
+          <select id="languageSwitcher" class="language-switcher" aria-label="Select language">
             <option value="en">English</option>
             <option value="zh">中文</option>
           </select>
         </div>
-        <div class="footer-links-container">
-          <h4>Links</h4>
-          <ul class="footer-links">
-            <li><a href="about.html" class="footer-link" data-i18n="footer.about">About</a></li>
-            <li><a href="privacy.html" class="footer-link" data-i18n="footer.privacy">Privacy</a></li>
-            <li><a href="terms.html" class="footer-link" data-i18n="footer.terms">Terms</a></li>
-            <li><a href="mailto:support@modelguru.deepseek.diy" class="footer-link" data-i18n="footer.contact">Contact</a></li>
-            <li><a href="reports.html" class="footer-link" data-i18n="nav.reports">Reports</a></li>
-            <li><a href="methodology.html" class="footer-link" data-i18n="footer.methodology">Our Methodology</a></li>
+
+        <!-- Column 2: Explore Links -->
+        <div class="footer-column footer-links">
+          <h4 data-i18n="footer.sections.explore.title">Explore</h4>
+          <ul>
+            <li><a href="models.html" data-i18n="footer.sections.explore.links.models">All Models</a></li>
+            <li><a href="platforms.html" data-i18n="footer.sections.explore.links.platforms">Platforms</a></li>
+            <li><a href="reports.html" data-i18n="footer.sections.explore.links.reports">Premium Reports</a></li>
+            <li><a href="index.html#model-comparison-section" data-i18n="footer.sections.explore.links.compare">Compare Models</a></li>
           </ul>
+        </div>
+
+        <!-- Column 3: Company Links -->
+        <div class="footer-column footer-links">
+          <h4 data-i18n="footer.sections.company.title">Company</h4>
+          <ul>
+            <li><a href="about.html" data-i18n="footer.sections.company.links.about">About Us</a></li>
+            <li><a href="blog.html" data-i18n="footer.sections.company.links.blog">Blog</a></li>
+            <li><a href="careers.html" data-i18n="footer.sections.company.links.careers">Careers</a></li>
+            <li><a href="mailto:support@modelguru.deepseek.diy" data-i18n="footer.sections.company.links.contact">Contact</a></li>
+          </ul>
+        </div>
+
+        <!-- Column 4: Resources & Legal Links -->
+        <div class="footer-column footer-links">
+          <h4 data-i18n="footer.sections.resources.title">Resources</h4>
+          <ul>
+            <li><a href="faq.html" data-i18n="footer.sections.resources.links.faq">FAQ</a></li>
+            <li><a href="methodology.html" data-i18n="footer.sections.resources.links.methodology">Methodology</a></li>
+            <li><a href="mailto:support@modelguru.deepseek.diy" data-i18n="footer.sections.resources.links.support">Support</a></li>
+            <li><a href="#" data-i18n="footer.sections.resources.links.apiDocs">API Docs (Soon)</a></li>
+          </ul>
+          <h4 data-i18n="footer.sections.legal.title" class="footer-subtitle">Legal</h4>
+          <ul>
+            <li><a href="privacy.html" data-i18n="footer.sections.legal.links.privacy">Privacy Policy</a></li>
+            <li><a href="terms.html" data-i18n="footer.sections.legal.links.terms">Terms of Service</a></li>
+            <li><a href="#" data-i18n="footer.sections.legal.links.cookies">Cookie Policy</a></li>
+          </ul>
+        </div>
+
+        <!-- Column 5: Newsletter -->
+        <div class="footer-column footer-newsletter">
+          <h4 data-i18n="footer.newsletter.title">Stay Updated</h4>
+          <p data-i18n="footer.newsletter.description">Subscribe for the latest AI model news and insights.</p>
+          <form id="footer-newsletter-form">
+            <input type="email" placeholder="Enter your email" data-i18n="footer.newsletter.placeholder" data-i18n-placeholder required>
+            <button type="submit" class="btn btn-primary" data-i18n="footer.newsletter.button">Subscribe</button>
+          </form>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 Model Guru. All rights reserved.</p>
+        <p data-i18n="footer.copyright" data-i18n-param-year="{new Date().getFullYear()}">© {year} Model Guru. All rights reserved.</p>
+        <p>
+          <span data-i18n="footer.madeWithPrefix">Made with</span>
+          <i class="fas fa-heart" style="color: #e25555;"></i>
+          <span data-i18n="footer.madeWithSuffix">by AI enthusiasts.</span>
+        </p>
       </div>
     </div>
   </footer>
