--- a/models.html
+++ b/models.html
@@ -7,7 +7,7 @@
     <meta name="description" data-i18n="models.subtitle" content="Browse and compare AI models across platforms">
     
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://modelguru.deepseek.diy/models.html" />
+    <link rel="canonical" href="https://modelguru.deepseek.diy/models" />
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/main.css">
