--- a/platforms.html
+++ b/platforms.html
@@ -7,7 +7,7 @@
     <meta name="description" data-i18n="platforms.pageDescription" content="Explore AI model platforms tracked by Model Guru, including Replicate, Hugging Face, and Stability AI.">
     
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://modelguru.deepseek.diy/platforms.html" />
+    <link rel="canonical" href="https://modelguru.deepseek.diy/platforms" />
 
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
